--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,10 @@
-version: '3.8'
-
 services:
   web:
     build: .
     container_name: flask-app
     environment:
-      - DB_HOST=${DB_HOST}    # change this when replacing MySQL contianer with another database
-      - DB_USER=${DB_USER}    # change this when replacing MySQL contianer with another database
+      - DB_HOST=${DB_HOST}
+      - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_NAME=${DB_NAME}
     ports:
@@ -14,7 +12,7 @@ services:
     depends_on:
       - mysql
     networks:
-      - app_network
+      - backend_net
 
   mysql:
     image: mysql:5.7
@@ -25,12 +23,12 @@ services:
     ports:
       - "3306:3306"
     networks:
-      - app_network
+      - backend_net
     volumes:
       - db-data:/var/lib/mysql
 
 networks:
-  app_network:
+  backend_net:
 
 volumes:
   db-data:
