--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Build the App
-      run: docker build -t entryTracker:1 .
+      run: docker build -t entry_tracker:1 .
       
     - name: Run Docker container
       run: docker run --name=entry_trackerb -p "5000:5000" -d entry_tracker:1
