--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Build the App
-      run: docker build -t entry_tracker:1 .
+      run: docker build -t entry_tracker:${{ github.run_number }} .
       
     - name: Run Docker container
-      run: docker run --name=entry_trackerb -p "5000:5000" -d entry_tracker:1
+      run: docker run --name=entry_trackerb -p "5000:5000" -d entry_tracker:${{ github.run_number }}
       
     - name: Wait 
       run: sleep 5
@@ -42,7 +42,7 @@ jobs:
       run: aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 779846827025.dkr.ecr.ap-south-1.amazonaws.com
 
     - name: Tag Docker Image
-      run: docker tag entry_tracker:1 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:1
+      run: docker tag entry_tracker:${{ github.run_number }} 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:${{ github.run_number }}
       
     - name: Push Docker to ECR
-      run: docker push 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:1
+      run: docker push 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:${{ github.run_number }}
