--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: entryTracker
-
+env:
+  AWS_SECURITY_GROUP_ID: sg-00257ff378acccd78
+  AWS_SUBNET_ID: subnet-02fe3384564948adb
+  INSTANCE_ID: 0
+  
 on:
   push:
     branches: [ "main" ]
@@ -83,27 +87,20 @@ jobs:
     - name: Checkout App
       uses: actions/checkout@v2
       
-    # - name: Configure AWS credentials
-    #   uses: aws-actions/configure-aws-credentials@v1
-    #   with:
-    #     aws-access-key-id: ${{ secrets.AWS_ID }}
-    #     aws-secret-access-key: ${{ secrets.AWS_SECRET }}
-    #     aws-region: ap-south-1
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET }}
+        aws-region: ap-south-1
 
-    # - name: Make scripts executable
-    #   run: chmod +x ./scripts/launch-ec2.sh
+    - name: Make scripts executable
+      run: chmod +x ./scripts/launch-ec2.sh
 
-    - name: print var
-      run: echo "a =  ${{entryTracker.AWS_SECURITY_GROUP_ID}}"
-    - name: print var2
-      run: echo "a =  ${{entryTracker.env.AWS_SECURITY_GROUP_ID}}"
-
-
-      
-    # - name: Launch EC2 and wait
-    #   run: ./scripts/launch-ec2.sh
-    #   env:
-    #     AWS_SECURITY_GROUP_ID: ${{ env.entryTracker.AWS_SECURITY_GROUP_ID }}
-    #     AWS_SUBNET_ID: ${{ env.entryTracker.AWS_SUBNET_ID }}
-    #     INSTANCE_ID: ${{ env.entryTracker.INSTANCE_ID }}
+    - name: Launch EC2 and wait
+      run: ./scripts/launch-ec2.sh
+      env:
+        AWS_SECURITY_GROUP_ID: ${{ env.AWS_SECURITY_GROUP_ID }}
+        AWS_SUBNET_ID: ${{ env.AWS_SUBNET_ID }}
+        INSTANCE_ID: ${{ env.INSTANCE_ID }}
     
