--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: entryTracker
 env:
   AWS_SECURITY_GROUP_ID: sg-00257ff378acccd78
   AWS_SUBNET_ID: subnet-02fe3384564948adb
+  AWS_EC2_KEY_NAME: morrost_ec2_keypair
   INSTANCE_ID: 0
   
 on:
@@ -101,6 +102,7 @@ jobs:
       run: ./scripts/launch-ec2.sh
       env:
         AWS_SECURITY_GROUP_ID: ${{ env.AWS_SECURITY_GROUP_ID }}
+        AWS_EC2_KEY_NAME: ${{env.AWS_EC2_KEY_NAME}}
         AWS_SUBNET_ID: ${{ env.AWS_SUBNET_ID }}
         INSTANCE_ID: ${{ env.INSTANCE_ID }}
     
