--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,12 +91,19 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET }}
         aws-region: ap-south-1
 
+    # Debug step to check files and permissions
+    - name: Debug directory content
+      run: |
+        pwd
+        ls -la
+        ls -la scripts/
+    
     - name: Make scripts executable
-      run: chmod +x ./scripts/run-instances.sh
-
+      run: |
+        chmod +x ./scripts/run-instances.sh
+        chmod +x ./scripts/user-data.sh
+    
     - name: Launch EC2 and wait
-      id: launchEC2
-      working-directory: scripts
-      run: ./run-instances.sh -u user-data.sh
+      run: scripts/run-instances.sh -u scripts/user-data.sh
 
     
