--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,5 +100,21 @@ jobs:
     
     - name: Launch EC2 and wait
       run: bash scripts/run-instances.sh -u scripts/user-data.sh
+      
+    - name: Import EC2 SSH key
+      run: |
+        echo "${{ secrets.EC2_PRI_KEY }}" > mor.pem
+        chmod 600 mor.pem
+          
+    - name: Run application
+      run: |
+        ssh -o StrictHostKeyChecking=no \
+            -i mor.pem \
+            ec2-user@${{ env.PUBLIC_IP }} '
+              cd /workspace/entryTracker && \
+              docker compose up -d
+            '
+
+      
 
     
