--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,8 +104,7 @@ jobs:
     - name: Configure SSH
       uses: webfactory/ssh-agent@v0.9.0
       with:
-          ssh-private-key: |
-            ${{ secrets.EC2_PRI_KEY }}
+          ssh-private-key: ${{ secrets.EC2_PRI_KEY }}
           
     - name: Run application
       run: |
