--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,7 @@ jobs:
     - name: Deploy with SSH
       run: |
         ssh ubuntu@13.235.17.14 '
-            cd /workspace/entryTracker && \
+            cd workspace/entryTracker && \
             docker compose up -d
         '   
     
