--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -72,10 +72,10 @@ jobs:
   #     run: aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 779846827025.dkr.ecr.ap-south-1.amazonaws.com
 
   #   - name: Tag Docker Image
-  #     run: docker tag entry_tracker:${{ github.run_number }} 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:${{ github.run_number }}
+  #     run: docker tag entry_tracker:${{ github.run_number }} 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:latest
       
   #   - name: Push Docker to ECR
-  #     run: docker push 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:${{ github.run_number }}
+  #     run: docker push 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:latest
   
   Continuous_deployment:
     # needs: publish
