--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -120,5 +120,7 @@ jobs:
       run: |
         ssh ubuntu@${{ env.PUBLIC_IP }} '
             cd /home/ubuntu/workspace/entryTracker && \
+            aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 779846827025.dkr.ecr.ap-south-1.amazonaws.com && \
             docker compose up -d
+        '
         '
