--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -7,78 +7,78 @@ on:
     branches: [ "main" ]
     
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 2
-  #   steps:
-  #   - name: Checkout App
-  #     uses: actions/checkout@v2
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 2
+    steps:
+    - name: Checkout App
+      uses: actions/checkout@v2
       
-  #   - name: Build the App
-  #     run: docker build -t entry_tracker:${{ github.run_number }} .
+    - name: Build the App
+      run: docker build -t entry_tracker:${{ github.run_number }} .
       
-  #   - name: Run Docker container
-  #     run: docker run --name=entry_trackerb -p "5000:5000" -d entry_tracker:${{ github.run_number }}
+    - name: Run Docker container
+      run: docker run --name=entry_trackerb -p "5000:5000" -d entry_tracker:${{ github.run_number }}
       
-  #   - name: Wait 
-  #     run: sleep 5
+    - name: Wait 
+      run: sleep 5
       
-  #   - name: CURL application
-  #     run: curl http://localhost:5000 
+    - name: CURL application
+      run: curl http://localhost:5000 
   
-  #   - name: test status code curl
-  #     run: |
-  #         response_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5000)
-  #         if [ $response_code -eq 200 ]; then
-  #         echo "Service is up and running (Status code: $response_code)"
-  #         exit 0
-  #         else
-  #         echo "Service check failed (Status code: $response_code)"
-  #         exit 1
-  #         fi
+    - name: test status code curl
+      run: |
+          response_code=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:5000)
+          if [ $response_code -eq 200 ]; then
+          echo "Service is up and running (Status code: $response_code)"
+          exit 0
+          else
+          echo "Service check failed (Status code: $response_code)"
+          exit 1
+          fi
           
-  # package-and-E2E:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 2
-  #   steps:  
-  #   - name: Checkout App
-  #     uses: actions/checkout@v2
+  package-and-E2E:
+    needs: build
+    runs-on: ubuntu-latest
+    timeout-minutes: 2
+    steps:  
+    - name: Checkout App
+      uses: actions/checkout@v2
       
-  #   - name: Package and run the whole application
-  #     run: docker compose up -d
+    - name: Package and run the whole application
+      run: docker compose up -d
     
-  #   - name: Wait for services to be ready
-  #     run: sleep 15
+    - name: Wait for services to be ready
+      run: sleep 15
     
-  #   - name: E2E Testing
-  #     run: curl http://localhost:5000 
+    - name: E2E Testing
+      run: curl http://localhost:5000 
    
-  # publish:
-  #   needs: package-and-E2E
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 2
-  #   steps:  
-  #   - name: Checkout App
-  #     uses: actions/checkout@v2
+  publish:
+    needs: package-and-E2E
+    runs-on: ubuntu-latest
+    timeout-minutes: 2
+    steps:  
+    - name: Checkout App
+      uses: actions/checkout@v2
       
-  #   - name: build
-  #     run: docker build -t entry_tracker:${{ github.run_number }} .
+    - name: build
+      run: docker build -t entry_tracker:${{ github.run_number }} .
  
-  #   - name: Configure AWS credentials
-  #     run: aws configure set aws_access_key_id ${{ secrets.AWS_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET }} && aws configure set region ap-south-1
+    - name: Configure AWS credentials
+      run: aws configure set aws_access_key_id ${{ secrets.AWS_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET }} && aws configure set region ap-south-1
 
-  #   - name: Authenticate Docker to AWS ECR
-  #     run: aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 779846827025.dkr.ecr.ap-south-1.amazonaws.com
+    - name: Authenticate Docker to AWS ECR
+      run: aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 779846827025.dkr.ecr.ap-south-1.amazonaws.com
 
-  #   - name: Tag Docker Image
-  #     run: docker tag entry_tracker:${{ github.run_number }} 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:latest
+    - name: Tag Docker Image
+      run: docker tag entry_tracker:${{ github.run_number }} 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:latest
       
-  #   - name: Push Docker to ECR
-  #     run: docker push 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:latest
+    - name: Push Docker to ECR
+      run: docker push 779846827025.dkr.ecr.ap-south-1.amazonaws.com/dev/entry_tracker:latest
   
   Continuous_deployment:
-    # needs: publish
+    needs: publish
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
@@ -122,5 +122,4 @@ jobs:
             cd /home/ubuntu/workspace/entryTracker && \
             aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 779846827025.dkr.ecr.ap-south-1.amazonaws.com && \
             docker compose up -d
-        '
         '
